advanced/kubernetes/k8s-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cloud-native-advanced
  labels:
    app: cloud-native-advanced
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: cloud-native-advanced
        tier: service
    spec:
      containers:
      - name: cloud-native-advanced
        image: "zhanat87/cloud-native-advanced:1.0.0"
        ports:
          - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
