advanced/kubernetes/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cloud-native-advanced
  labels:
    app: cloud-native-advanced
    tier: service
spec:
  # use NodePort here to be able to access a port on each node
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: cloud-native-advanced
